--- a/index.html
+++ b/index.html
@@ -7,13 +7,22 @@
   <body>
     <div class="header">
       <img src="img/logo.jpg" alt="" style="width:50%; max-width:300px">
-
+<h1>Esi redzams saviem klientiem</h1>
     </div>
     <div class="body">
 
     </div>
     <div class="akcijas">
+      <p></p>
+<div class="piedavajums">
 
+</div>
+<div class="piedavajums">
+
+</div>
+<div class="piedavajums">
+
+</div>
     </div>
     <div class="kontakti">
 
