--- a/index.html
+++ b/index.html
@@ -10,11 +10,12 @@
 <h1>Esi redzams saviem klientiem</h1>
     </div>
     <div class="body">
-
+<p>Tavs pieteikums ir saņemts. Tiklīdz administrators to apstiprinās, tas būs redzams jaunsveikals.lv platformā</p>
     </div>
     <div class="akcijas">
-      <p></p>
-<div class="piedavajums">
+      <h2>Vēlies izcelt savu sludinājumu?</h2>
+      <p>Izvēlies vienu no trim piedāvājumiem un padari savu sludinājumu redzamāku</p>
+      <div class="piedavajums">
 
 </div>
 <div class="piedavajums">
