--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
     <div class="body">
 <p>Tavs pieteikums ir saņemts. Tiklīdz administrators to apstiprinās, tas būs redzams jaunsveikals.lv platformā</p>
     </div>
+    <div class="icons">
+      <div id="budzets"> <img src="img/bezmaksas.png" alt="" style="width:80%">  <h2>Bezmaksas pozīcijas</h2> </div>
+      <div id="pievienosana"><img src="" alt="img/bezmaksas.png" style="width:80%">    <h2>Viegli pievienoties</h2> </div>
+      <div id="ekosistēma">  <img src="" alt="img/bezmaksas.png" style="width:80%"> <h2>Jauns.lv ekosistēma</h2> </div>
+    </div>
     <div class="akcijas">
       <h2>Vēlies izcelt savu sludinājumu?</h2>
       <p>Izvēlies vienu no trim piedāvājumiem un padari savu sludinājumu redzamāku</p>
