--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
       <div id="budzets"> <img src="img/bezmaksas.png" alt="" style="width: 50%;max-width: 200px;">  <h2>Bezmaksas pozīcijas</h2> </div>
           </div>
     <div class="icons">
-            <div id="pievienosana"><img src="" alt="img/viegli-pievienoties.png" style="width: 50%;max-width: 200px;">    <h2>Viegli pievienoties</h2> </div>
+            <div id="pievienosana"><img src="img/viegli-pievienoties.png" alt="viegli pievienoties" style="width: 50%;max-width: 200px;">    <h2>Viegli pievienoties</h2> </div>
           </div>
     <div class="icons">
-            <div id="ekosistēma">  <img src="" alt="img/jauns-ekosistema.png" style="width: 50%;max-width: 200px;"> <h2>Jauns.lv ekosistēma</h2> </div>
+            <div id="ekosistēma">  <img src="img/jauns-ekosistema.png" alt="jauns.lv ekosistēma" style="width: 50%;max-width: 200px;"> <h2>Jauns.lv ekosistēma</h2> </div>
     </div>
     <div class="akcijas">
       <h2>Vēlies izcelt savu sludinājumu?</h2>
