--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <div class="body">
 <p>Tavs pieteikums ir saņemts. Tiklīdz administrators to apstiprinās, tas būs redzams jaunsveikals.lv platformā</p>
     </div>
+    <div class="benefits">
     <div class="icons">
       <div id="budzets"> <img src="img/bezmaksas.png" alt="" style="width: 50%;max-width: 200px;">  <h2>Bezmaksas pozīcijas</h2> </div>
           </div>
@@ -20,7 +21,7 @@
           </div>
     <div class="icons">
             <div id="ekosistēma">  <img src="img/jauns-ekosistema.png" alt="jauns.lv ekosistēma" style="width: 50%;max-width: 200px;"> <h2>Jauns.lv ekosistēma</h2> </div>
-    </div>
+    </div></div>
     <div class="akcijas">
       <h2>Vēlies izcelt savu sludinājumu?</h2>
       <p>Izvēlies vienu no trim piedāvājumiem un padari savu sludinājumu redzamāku</p>
