--- a/index.html
+++ b/index.html
@@ -26,13 +26,11 @@
       <h2>Vēlies izcelt savu sludinājumu?</h2>
       <p>Izvēlies vienu no trim piedāvājumiem un padari savu sludinājumu redzamāku</p>
       <div class="piedavajums">
-
-</div>
-<div class="piedavajums">
-
-</div>
-<div class="piedavajums">
-
+        <div class="placeholder"></div>
+</div><div class="piedavajums">
+        <div class="placeholder"></div>
+</div><div class="piedavajums">
+        <div class="placeholder"></div>
 </div>
     </div>
     <div class="kontakti">
