--- a/index.html
+++ b/index.html
@@ -27,10 +27,19 @@
       <p>Izvēlies vienu no trim piedāvājumiem un padari savu sludinājumu redzamāku</p>
       <div class="piedavajums">
         <div class="placeholder"></div>
+        <div class="cena">
+          20Eiro
+        </div>
 </div><div class="piedavajums">
         <div class="placeholder"></div>
+        <div class="cena">
+          20Eiro
+        </div>
 </div><div class="piedavajums">
         <div class="placeholder"></div>
+        <div class="cena">
+          20Eiro
+        </div>
 </div>
     </div>
     <div class="kontakti">
