--- a/index.html
+++ b/index.html
@@ -14,14 +14,25 @@
     </div>
     <div class="benefits">
     <div class="icons">
-      <div id="budzets"> <img src="img/bezmaksas.png" alt="" style="height:100px">  <h2>Bezmaksas pozīcijas</h2> </div>
-        </div>
-    <div class="icons">
-            <div id="pievienosana"><img src="img/viegli-pievienoties.png" alt="viegli pievienoties" style="height:100px">    <h2>Viegli pievienoties</h2> </div>
+        <div id="budzets">
+          <div class="bilde">
+        <img src="img/bezmaksas.png" alt="" style="width:100%"></div>
+        <h2>Bezmaksas pozīcijas</h2>
       </div>
+    </div>
     <div class="icons">
-            <div id="ekosistēma">  <img src="img/jauns-ekosistema.png" alt="jauns.lv ekosistēma" style="height:100px"> <h2>Jauns.lv ekosistēma</h2> </div>
-    </div></div>
+      <div id="pievienosana">
+        <div class="bilde"><img src="img/viegli-pievienoties.png" alt="viegli pievienoties" style="width:100%"></div>
+        <h2>Viegli pievienoties</h2>
+      </div>
+    </div>
+    <div class="icons">
+      <div id="ekosistēma">
+        <div class="bilde"> <img src="img/jauns-ekosistema.png" alt="jauns.lv ekosistēma" style="height:100px"></div>
+        <h2>Jauns.lv ekosistēma</h2>
+      </div>
+    </div>
+  </div>
     <div class="akcijas">
       <h2>Vēlies izcelt savu sludinājumu?</h2>
       <p>Izvēlies vienu no trim piedāvājumiem un padari savu sludinājumu redzamāku</p>
