--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
     <div class="icons">
         <div id="budzets">
           <div class="bilde">
-        <img src="img/bezmaksas.png" alt="" style="width:100%"></div>
+        <img src="img/bezmaksas.png" alt="" style="height:100px"></div>
         <h2>Bezmaksas pozīcijas</h2>
       </div>
     </div>
     <div class="icons">
       <div id="pievienosana">
-        <div class="bilde"><img src="img/viegli-pievienoties.png" alt="viegli pievienoties" style="width:100%"></div>
+        <div class="bilde"><img src="img/viegli-pievienoties.png" alt="viegli pievienoties" style="height:100px"></div>
         <h2>Viegli pievienoties</h2>
       </div>
     </div>
