--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <div class="header">
-      <img src="img/logo.jpg" alt="" style="width:50%; max-width:300px">
+      <img src="img/logo.jpg" alt="" style="width:150px">
 <h1>Esi redzams saviem klientiem</h1>
     </div>
     <div class="body">
