--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
     <div class="akcijas">
       <h2>Vēlies izcelt savu sludinājumu?</h2>
       <p>Izvēlies vienu no trim piedāvājumiem un padari savu sludinājumu redzamāku</p>
+      <div class="piedavajumi">
       <div class="piedavajums">
         <div class="placeholder"></div>
         <div class="cena">
@@ -52,6 +53,7 @@
           20Eiro
         </div>
 </div>
+    </div>
     </div>
     <div class="kontakti">
 
