--- a/index.html
+++ b/index.html
@@ -48,6 +48,12 @@
           20Eiro
         </div>
 </div><div class="piedavajums">
+  <div class="kategorija">
+
+  </div>
+  <div class="square">
+
+  </div>
         <div class="placeholder"></div>
         <div class="cena">
           20Eiro
