--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
         </div>
 </div><div class="piedavajums">
   <div class="kategorija">
-
+<p>Ražots Latvijā</p>
   </div>
   <div class="square">
-
+<p>Īpašais piedāvājums</p>
   </div>
         <div class="placeholder"></div>
         <div class="cena">
