--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@
           20Eiro
         </div>
 </div><div class="piedavajums">
+  <div class="circle">
+<p>Īpašais piedāvājums</p>
+  </div>
         <div class="placeholder"></div>
         <div class="cena">
           20Eiro
