--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         </div>
 </div><div class="piedavajums">
   <div class="circle">
-<p>Īpašais piedāvājums</p>
+<span>%</span>
   </div>
         <div class="placeholder"></div>
         <div class="cena">
@@ -52,10 +52,10 @@
         </div>
 </div><div class="piedavajums">
   <div class="kategorija">
-<p>Ražots Latvijā</p>
+<span>Ražots Latvijā</span>
   </div>
   <div class="square">
-<p>Īpašais piedāvājums</p>
+<span>Īpašais piedāvājums</span>
   </div>
         <div class="placeholder"></div>
         <div class="cena">
