--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <div class="header">
-      <img src="img/logo.jpg" alt="" style="width:150px">
+      <img src="https://krisbir.github.io/mailing/img/logo.jpg" alt="" style="width:150px">
 <h1>Esi redzams saviem klientiem</h1>
     </div>
     <div class="body">
@@ -16,19 +16,19 @@
     <div class="icons">
         <div id="budzets">
           <div class="bilde">
-        <img src="img/bezmaksas.png" alt="" style="height:100px"></div>
+        <img src="https://krisbir.github.io/mailing/img/bezmaksas.png" alt="" style="height:100px"></div>
         <h2>Bezmaksas pozīcijas</h2>
       </div>
     </div>
     <div class="icons">
       <div id="pievienosana">
-        <div class="bilde"><img src="img/viegli-pievienoties.png" alt="viegli pievienoties" style="height:100px"></div>
+        <div class="bilde"><img src="https://krisbir.github.io/mailing/img/viegli-pievienoties.png" alt="viegli pievienoties" style="height:100px"></div>
         <h2>Viegli pievienoties</h2>
       </div>
     </div>
     <div class="icons">
       <div id="ekosistēma">
-        <div class="bilde"> <img src="img/jauns-ekosistema.png" alt="jauns.lv ekosistēma" style="height:100px"></div>
+        <div class="bilde"> <img src="https://krisbir.github.io/mailing/img/jauns-ekosistema.png" alt="jauns.lv ekosistēma" style="height:100px"></div>
         <h2>Jauns.lv ekosistēma</h2>
       </div>
     </div>
