--- a/index.html
+++ b/index.html
@@ -3,6 +3,103 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="https://krisbir.github.io/mailing/css/master.css">
     <title>Emailing</title>
+    <style media="screen">
+      body {
+          max-width: 800px;
+          margin: 0 auto;
+      }
+      .header {
+          margin: 0 auto;
+          width: 100%;
+          min-height: 100px;
+          text-align: center;
+          box-shadow: 0px 27px 15px -34px black;
+      }
+      .icons {
+          width: 23%;
+          float: left;
+          padding: 2% 4%;
+          margin: 1%;
+          text-align: center;
+          box-shadow: 1px 2px 3px #00000070;
+      }
+      .benefits {
+          width: 70%;
+          height: 200px;
+          margin: 0 auto;
+      }
+      .bilde {
+          margin: 10px 0;
+          max-height: 100px;
+      }
+      h1, h2, h3, h4{
+        margin:0;
+      }
+      h1 {
+          padding: 5px 0;
+          font-size: 22px;
+          margin: 10px 0;
+      }
+      h2{
+          font-size: 18px;
+      }
+      .akcijas{
+          padding-top: 20px;
+      }
+      .placeholder {
+          width: 100%;
+          min-height: 50%;
+          background: linear-gradient(45deg, #b3b3b3, transparent);
+      }
+      .kategorija {
+          width: 50%;
+          height: 10%;
+          background: red;
+          position: absolute;
+          top: 45%;
+          left: 10px;
+      }
+      .square {
+          background: #fe0000;
+          width: fit-content;
+          line-height: 22px;
+          color: white;
+          padding: 2px 5px;
+          top: 10px;
+          left: 10px;
+          height: 10%;
+          position: absolute;
+      }
+      .circle {
+          font-size: 60px;
+          background: red;
+          color: white;
+          width: 70px;
+          border-radius: 100px;
+          top: -6px;
+          right: -6px;
+          height: 70px;
+          position: absolute;
+      }
+      .piedavajums {
+          box-shadow: 1px 2px 4px grey;
+          border: 1px solid red;
+          border-radius: 2px;
+          position: relative;
+          width: 32%;
+          height: 250px;
+          margin: 0px 10px;
+      }
+      .piedavajumi{
+        display:flex;
+      }
+      .cena {
+          font-size: 25px;
+          text-align: center;
+          padding: 10px 0;
+      }
+
+    </style>
   </head>
   <body>
     <div class="header">
