--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="https://krisbir.github.io/mailing/css/master.css">
-    <title>Emailing</title>
+    <title>Emailing 2</title>
     <style media="screen">
       body {
           max-width: 800px;
