--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="https://krisbir.github.io/mailing/css/master.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/master.css">
     <title>Emailing 2</title>
+    
     <style media="screen">
       body {
           max-width: 800px;
