--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 <p>Tavs pieteikums ir saņemts. Tiklīdz administrators to apstiprinās, tas būs redzams jaunsveikals.lv platformā</p>
     </div>
     <div class="benefits">
+    <h2>Kāpēc izvēlēties Jaunsveiks.lv</h2>
     <div class="icons">
         <div id="budzets">
           <div class="bilde">
