--- a/index.html
+++ b/index.html
@@ -41,28 +41,10 @@
       <div class="piedavajumi">
       <div class="piedavajums">
         <div class="placeholder"></div>
-        <div class="cena">
-          20Eiro
-        </div>
-</div><div class="piedavajums">
-  <div class="circle">
-<span>%</span>
-  </div>
-        <div class="placeholder"></div>
-        <div class="cena">
-          20Eiro
-        </div>
-</div><div class="piedavajums">
-  <div class="kategorija">
-<span>Ražots Latvijā</span>
-  </div>
-  <div class="square">
-<span>Īpašais piedāvājums</span>
-  </div>
-        <div class="placeholder"></div>
-        <div class="cena">
-          20Eiro
-        </div>
+        <div class="square"> <span>Īpašais piedāvājums</span> </div>
+        <div class="circle">  <span>%</span></div>
+        <div class="kategorija"><span>Ražots Latvijā</span></div>
+          <div class="cena">20Eiro</div>
 </div>
     </div>
     </div>
