--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   </div>
     <div class="akcijas">
       <h2>Vēlies izcelt savu sludinājumu?</h2>
-      <p>Izvēlies vienu no trim piedāvājumiem un padari savu sludinājumu redzamāku</p>
+      <p>Izvēlies vienu vai apvieno visas piedāvātās opcijas un padari savu sludinājumu redzamāku</p>
       <div class="piedavajumi">
       <div class="piedavajums">
         <div class="placeholder"></div>
