--- a/index.html
+++ b/index.html
@@ -53,5 +53,5 @@
     </div>
   </body>
   <footer>
-  Ja neredzi šo epastu, tad atver to interneta pārlūkā spiežot šeit
+  Ja neredzi šo epastu, tad atver to interneta pārlūkā spiežot <a href="https://krisbir.github.io/mailing/">šeit</a>
 </footer>
