--- a/index.html
+++ b/index.html
@@ -53,5 +53,6 @@
     </div>
   </body>
   <footer>
-  Ja neredzi šo epastu, tad atver to interneta pārlūkā spiežot <a href="https://krisbir.github.io/mailing/">šeit</a>
+  Ja neredzi šo epastu, tad atver to interneta pārlūkā spiežot <a href="https://krisbir.github.io/mailing/" >šeit</a>
+  <p>Jaunsveikals.lv</p>
 </footer>
