--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       <p>Izvēlies vienu vai apvieno visas piedāvātās opcijas un padari savu sludinājumu redzamāku</p>
       <div class="piedavajumi">
       <div class="piedavajums">
-        <div class="placeholder"></div>
+        <div class="placeholder"><img src="https://jaunsveikals.zenis.lv/sites/default/files/styles/sludinajuma_attels_480x350_/public/sludinajumi/2020-09-01/960x384-Fin_Kastelholm.jpg?itok=h6NV5zlZ" style="width:100%"></div>
         <div class="square"> <span>Īpašais piedāvājums</span> </div>
         <div class="circle">  <span>%</span></div>
         <div class="kategorija"><span>Ražots Latvijā</span></div>
