--- a/index.html
+++ b/index.html
@@ -44,7 +44,15 @@
         <div class="square"> <span>Īpašais piedāvājums</span> </div>
         <div class="circle">  <span>%</span></div>
         <div class="kategorija"><span>Ražots Latvijā</span></div>
-          <div class="cena">20Eiro</div>
+          <div class="texts">
+            <div class="virsraksts">
+              RĪGA - ĀLANDU SALAS
+            </div>RĪGA - ĀLANDU SALAS
+            <div class="apraksts">
+              Sāc agro zelta rudeni iedvesmojoši.
+            </div>
+          </div>
+          <div class="links">Apskatīt</div>
 </div>
     </div>
     </div>
