--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           <div class="texts">
             <div class="virsraksts">
               RĪGA - ĀLANDU SALAS
-            </div>RĪGA - ĀLANDU SALAS
+            </div>
             <div class="apraksts">
               Sāc agro zelta rudeni iedvesmojoši.
             </div>
