--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <h2>Vēlies izcelt savu sludinājumu?</h2>
       <p>Izvēlies vienu vai apvieno visas piedāvātās opcijas un padari savu sludinājumu redzamāku</p>
       <div class="piedavajumi">
-      <div class="piedavajums">
+      <div class="elements">
         <div class="placeholder"><img src="https://jaunsveikals.zenis.lv/sites/default/files/styles/sludinajuma_attels_480x350_/public/sludinajumi/2020-09-01/960x384-Fin_Kastelholm.jpg?itok=h6NV5zlZ" style="width:100%"></div>
         <div class="square"> <span>Īpašais piedāvājums</span> </div>
         <div class="circle">  <span>%</span></div>
@@ -53,6 +53,21 @@
             </div>
             <div class="links">Apskatīt</div>
           </div>
+          </div>
+          <div class="piedavajums" id=""birka">
+            <h2>Birka</h2>
+            <p>Pievieno savam rakstam</p>
+            <p>20eiro</p>
+          </div>
+          <div class="piedavajums" id=""birka">
+            <h2>Birka</h2>
+            <p>Pievieno savam rakstam</p>
+            <p>20eiro</p>
+          </div>
+          <div class="piedavajums" id=""birka">
+            <h2>Birka</h2>
+            <p>Pievieno savam rakstam</p>
+            <p>20eiro</p>
           </div>
     </div>
     </div>
