--- a/index.html
+++ b/index.html
@@ -56,18 +56,18 @@
           </div>
           <div class="piedavajums" id=""birka">
             <h2>Birka</h2>
-            <p>Pievieno savam rakstam</p>
-            <p>20eiro</p>
+            <p class="pied_apraksts">Pievieno savam rakstam</p>
+            <p class="cena">20€ / mēnesī</p>
           </div>
           <div class="piedavajums" id=""birka">
-            <h2>Birka</h2>
-            <p>Pievieno savam rakstam</p>
-            <p>20eiro</p>
+            <h2>Izcelts</h2>
+            <p class="pied_apraksts">Rakstam tiek izvietots pirmajās pozīcijās, pievienots izcelošs rāmis un birka "īpašais sludinājums"</p>
+            <p class="cena">50€ / mēnesī</p>
           </div>
           <div class="piedavajums" id=""birka">
-            <h2>Birka</h2>
-            <p>Pievieno savam rakstam</p>
-            <p>20eiro</p>
+            <h2>Jauns.lv ekosistēma</h2>
+            <p class="pied_apraksts">Izvieto sludinājumu portālā jauns.lv īpaši izvēlētās pozīcijās</p>
+            <p class="cena">sākot no 100€</p>
           </div>
     </div>
     </div>
