--- a/index.html
+++ b/index.html
@@ -55,7 +55,8 @@
           </div>
           </div>
           <div class="piedavajums" id=""birka">
-            <h2>Birka</h2>
+            <div class="bullet">
+            <h2>Birka</h2></div>
             <p class="pied_apraksts">Pievieno savam rakstam</p>
             <p class="cena">20€ / mēnesī</p>
           </div>
