--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   </div>
     <div class="akcijas">
       <h1>Vēlies izcelt savu sludinājumu?</h1>
-      <p>Izvēlies vienu vai apvieno visas piedāvātās opcijas un padari savu sludinājumu redzamāku</p>
+      <p>Izvēlies vienu vai apvieno visas piedāvātās opcijas un padari savu sludinājumu redzamāku. Sasniedz līdz 200 tūkstošiem Jauns.lv lietotājus mēnesī.</p>
       <div class="piedavajumi">
       <div class="elements">
         <div class="placeholder"><img src="https://jaunsveikals.zenis.lv/sites/default/files/styles/sludinajuma_attels_480x350_/public/sludinajumi/2020-09-01/960x384-Fin_Kastelholm.jpg?itok=h6NV5zlZ" style="width:100%"></div>
@@ -68,7 +68,7 @@
           <div class="piedavajums" id=""birka">
             <h2>Jauns.lv ekosistēma</h2>
             <p class="pied_apraksts">Izvieto sludinājumu portālā jauns.lv īpaši izvēlētās pozīcijās</p>
-            <p class="cena">sākot no 100€</p>
+            <p class="cena">sākot no 100€ mēnesī</p>
           </div>
     </div>
     </div>
