--- a/index.html
+++ b/index.html
@@ -55,18 +55,17 @@
           </div>
           </div>
           <div class="piedavajums" id=""birka">
-            <div class="bullet">
-            <h2>Birka</h2></div>
+            <h2 class="options">Birka</h2>
             <p class="pied_apraksts">Pievieno savam rakstam</p>
             <p class="cena">20€ / mēnesī</p>
           </div>
           <div class="piedavajums" id=""birka">
-            <h2>Izcelts</h2>
+            <h2 class="options">Izcelts</h2>
             <p class="pied_apraksts">Rakstam tiek izvietots pirmajās pozīcijās, pievienots izcelošs rāmis un birka "īpašais sludinājums"</p>
             <p class="cena">50€ / mēnesī</p>
           </div>
           <div class="piedavajums" id=""birka">
-            <h2>Jauns.lv ekosistēma</h2>
+            <h2 class="options">Jauns.lv ekosistēma</h2>
             <p class="pied_apraksts">Izvieto sludinājumu portālā jauns.lv īpaši izvēlētās pozīcijās</p>
             <p class="cena">sākot no 100€ mēnesī</p>
           </div>
