--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <div class="placeholder"><img src="https://jaunsveikals.zenis.lv/sites/default/files/styles/sludinajuma_attels_480x350_/public/sludinajumi/2020-09-01/960x384-Fin_Kastelholm.jpg?itok=h6NV5zlZ" style="width:100%"></div>
         <div class="square"> <span>Īpašais piedāvājums</span> </div>
         <div class="circle">  <span>%</span></div>
-        <div class="kategorija"><span>Ražots Latvijā</span></div>
+        <div class="kategorija"><span>jaunsveikals.lv</span></div>
           <div class="texts">
             <div class="virsraksts">
               RĪGA - ĀLANDU SALAS
