--- a/index.html
+++ b/index.html
@@ -54,17 +54,23 @@
             <div class="links">Apskatīt</div>
           </div>
           </div>
-          <div class="piedavajums" id=""birka">
-            <h2 class="options">Birka</h2>
-            <p class="pied_apraksts">Pievieno savam rakstam</p>
-            <p class="cena">20€ / mēnesī</p>
+          <div class="piedavajums">
+            <div class="pirkt">
+              <div class="cena">20 eiro</div>
+              <div class="pikt">Pirkt   
+              </div>
+            </div>
+            <div class="info">
+              <h2 class="options">Birka</h2>
+              <p class="pied_apraksts">Pievieno savam rakstam</p>
+            </div>
           </div>
-          <div class="piedavajums" id=""birka">
+          <div class="piedavajums">
             <h2 class="options">Izcelts</h2>
             <p class="pied_apraksts">Rakstam tiek izvietots pirmajās pozīcijās, pievienots izcelošs rāmis un birka "īpašais sludinājums"</p>
             <p class="cena">50€ / mēnesī</p>
           </div>
-          <div class="piedavajums" id=""birka">
+          <div class="piedavajums">
             <h2 class="options">Jauns.lv ekosistēma</h2>
             <p class="pied_apraksts">Izvieto sludinājumu portālā jauns.lv īpaši izvēlētās pozīcijās</p>
             <p class="cena">sākot no 100€ mēnesī</p>
