--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
           <div class="piedavajums">
             <div class="pirkt">
               <div class="cena">20 eiro</div>
-              <div class="pikt">Pirkt   
+              <div class="pikt"><img src="https://www.flaticon.com/svg/static/icons/svg/833/833314.svg" style="width:50%" alt=""><<p>Pirkt</p>
               </div>
             </div>
             <div class="info">
