--- a/index.html
+++ b/index.html
@@ -56,9 +56,8 @@
           </div>
           <div class="piedavajums">
             <div class="pirkt">
-              <div class="cena">20 eiro</div>
               <div class="grozs"><img src="https://www.flaticon.com/svg/static/icons/svg/833/833314.svg" style="width:50%" alt=""><p>Pirkt</p>
-              <div class="cena">20 eiro</div>
+              <div class="cena">20€</div>
               </div>
             </div>
             <div class="info">
@@ -67,14 +66,26 @@
             </div>
           </div>
           <div class="piedavajums">
-            <h2 class="options">Izcelts</h2>
-            <p class="pied_apraksts">Rakstam tiek izvietots pirmajās pozīcijās, pievienots izcelošs rāmis un birka "īpašais sludinājums"</p>
-            <p class="cena">50€ / mēnesī</p>
+            <div class="pirkt">
+              <div class="grozs"><img src="https://www.flaticon.com/svg/static/icons/svg/833/833314.svg" style="width:50%" alt=""><p>Pirkt</p>
+              <div class="cena">20€</div>
+              </div>
+            </div>
+            <div class="info">
+              <h2 class="options">Izcelts raksts</h2>
+              <p class="pied_apraksts">Rakstam tiek izvietots pirmajās pozīcijās, pievienots izcelošs rāmis un birka "īpašais sludinājums"</p>
+            </div>
           </div>
           <div class="piedavajums">
-            <h2 class="options">Jauns.lv ekosistēma</h2>
-            <p class="pied_apraksts">Izvieto sludinājumu portālā jauns.lv īpaši izvēlētās pozīcijās</p>
-            <p class="cena">sākot no 100€ mēnesī</p>
+            <div class="pirkt">
+              <div class="grozs"><img src="https://www.flaticon.com/svg/static/icons/svg/833/833314.svg" style="width:50%" alt=""><p>Pirkt</p>
+              <div class="cena">no 100€</div>
+              </div>
+            </div>
+            <div class="info">
+              <h2 class="options">Jauns.lv ekosistēma</h2>
+              <p class="pied_apraksts">Izvieto sludinājumu portālā jauns.lv īpaši izvēlētās pozīcijās</p>
+            </div>
           </div>
     </div>
     </div>
