--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
           </div>
           <div class="piedavajums">
             <div class="pirkt">
-              <div class="grozs"><img src="https://www.flaticon.com/svg/static/icons/svg/833/833314.svg" style="width:50%" alt=""><p>Pirkt</p>
+              <div class="grozs"><img src="https://www.flaticon.com/svg/static/icons/svg/833/833314.svg" style="width:50%" alt="">
               <div class="cena">20€</div>
               </div>
             </div>
@@ -67,7 +67,7 @@
           </div>
           <div class="piedavajums">
             <div class="pirkt">
-              <div class="grozs"><img src="https://www.flaticon.com/svg/static/icons/svg/833/833314.svg" style="width:50%" alt=""><p>Pirkt</p>
+              <div class="grozs"><img src="https://www.flaticon.com/svg/static/icons/svg/833/833314.svg" style="width:50%" alt="">
               <div class="cena">20€</div>
               </div>
             </div>
@@ -78,7 +78,7 @@
           </div>
           <div class="piedavajums">
             <div class="pirkt">
-              <div class="grozs"><img src="https://www.flaticon.com/svg/static/icons/svg/833/833314.svg" style="width:50%" alt=""><p>Pirkt</p>
+              <div class="grozs"><img src="https://www.flaticon.com/svg/static/icons/svg/833/833314.svg" style="width:50%" alt="">
               <div class="cena">no 100€</div>
               </div>
             </div>
