--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
               <p class="pied_apraksts">Rakstam tiek izvietots pirmajās pozīcijās, pievienots izcelošs rāmis un birka "īpašais sludinājums"</p>
             </div>
           </div>
+          <h2>Papildus opcijas</h2>
           <div class="piedavajums">
             <div class="pirkt">
               <div class="grozs"><img src="https://www.flaticon.com/svg/static/icons/svg/833/833314.svg" style="width:50%" alt="">
