--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             </div>
             <div class="info">
               <h2 class="options">Birka</h2>
-              <p class="pied_apraksts">Pievieno savam rakstam</p>
+              <p class="pied_apraksts">Pievieno savam rakstam laika atskaiti, atlaidi vai ikonu</p>
             </div>
           </div>
           <div class="piedavajums">
