--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
               <p class="pied_apraksts">Izvieto sludinājumu portālā jauns.lv īpaši izvēlētās pozīcijās</p>
             </div>
           </div>
+          <p>Cenas norādītas par vienu mēnēsi</p>
     </div>
     </div>
     <div class="kontakti">
